rest api and openAPi specification is updated to work with new data base
