# Proj1/Rest/openAPI specification.json
@@ -7,152 +7,22 @@
     "version": "0.0.1"
   },
   "paths": {
-    "/example": {
-      "post": {
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "example": {
-                "key1": "value",
-                "key2": 42
-              },
-              "schema": {
-                "properties": {
-                  "key1": {
-                    "type": "string"
-                  },
-                  "key2": {
-                    "type": "number"
-                  }
-                },
-                "type": "object"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Successfully received the JSON object"
-          }
-        },
-        "summary": "Example Route",
-        "tags": [
-          "example"
-        ]
-      }
-    },
-    "/example2": {
-      "post": {
-        "parameters": [
-          {
-            "example": {
-              "key1": "value",
-              "key2": 42
-            },
-            "in": "body",
-            "name": "body",
-            "required": true,
-            "schema": {
-              "properties": {
-                "key1": {
-                  "type": "string"
-                },
-                "key2": {
-                  "type": "number"
-                }
-              },
-              "type": "object"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successfully received the JSON object"
-          }
-        },
-        "summary": "Example Route",
-        "tags": [
-          "example"
-        ]
-      }
-    },
-    "/iots": {
-      "get": {
-        "responses": {
-          "200": {
-            "description": "Return all IoT readings"
-          }
-        },
-        "summary": "Get all IoT readings"
-      },
-      "post": {
-        "parameters": [
-          {
-            "example": {
-              "BOD": 18.0,
-              "conductivity": 158.0,
-              "fecal": 28.0,
-              "nitr": 108.0,
-              "oxygen": 58.0,
-              "ph": 9.0,
-              "temperature": 29.0,
-              "turbidity": 9.0
-            },
-            "in": "body",
-            "name": "body",
-            "required": true,
-            "schema": {
-              "properties": {
-                "BOD": {
-                  "type": "number"
-                },
-                "conductivity": {
-                  "type": "number"
-                },
-                "fecal": {
-                  "type": "number"
-                },
-                "nitr": {
-                  "type": "number"
-                },
-                "oxygen": {
-                  "type": "number"
-                },
-                "ph": {
-                  "type": "number"
-                },
-                "temperature": {
-                  "type": "number"
-                },
-                "turbidity": {
-                  "type": "number"
-                }
-              },
-              "type": "object"
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Successfully created a new IoT reading"
-          },
-          "400": {
-            "description": "Bad Request - Invalid input data"
-          }
-        },
-        "summary": "Create a new IoT reading"
-      }
-    },
-    "/iots/{iot_id}": {
+    "/iot/{ts}/{device}": {
       "delete": {
         "parameters": [
           {
+            "description": "Timestamp",
             "in": "path",
-            "name": "iot_id",
+            "name": "ts",
             "required": true,
-            "schema": {
-              "type": "integer"
-            }
+            "type": "string"
+          },
+          {
+            "description": "Device ID",
+            "in": "path",
+            "name": "device",
+            "required": true,
+            "type": "string"
           }
         ],
         "responses": {
@@ -168,12 +38,18 @@
       "get": {
         "parameters": [
           {
+            "description": "Timestamp",
             "in": "path",
-            "name": "iot_id",
+            "name": "ts",
             "required": true,
-            "schema": {
-              "type": "integer"
-            }
+            "type": "string"
+          },
+          {
+            "description": "Device ID",
+            "in": "path",
+            "name": "device",
+            "required": true,
+            "type": "string"
           }
         ],
         "responses": {
@@ -189,43 +65,53 @@
       "put": {
         "parameters": [
           {
+            "description": "Timestamp",
+            "in": "path",
+            "name": "ts",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "description": "Device ID",
+            "in": "path",
+            "name": "device",
+            "required": true,
+            "type": "string"
+          },
+          {
             "example": {
-              "BOD": 18.0,
-              "conductivity": 158.0,
-              "fecal": 28.0,
-              "nitr": 108.0,
-              "oxygen": 58.0,
-              "ph": 9.0,
-              "temperature": 29.0,
-              "turbidity": 9.0
+              "co": 0.00495593864839124,
+              "humidity": 51.0,
+              "light": true,
+              "lpg": 0.00765082227055719,
+              "motion": true,
+              "smoke": 0.0204112701224129,
+              "temp": 25.0
             },
             "in": "body",
             "name": "body",
             "required": true,
             "schema": {
               "properties": {
-                "BOD": {
+                "co": {
                   "type": "number"
                 },
-                "conductivity": {
+                "humidity": {
                   "type": "number"
                 },
-                "fecal": {
+                "light": {
+                  "type": "boolean"
+                },
+                "lpg": {
                   "type": "number"
                 },
-                "nitr": {
+                "motion": {
+                  "type": "boolean"
+                },
+                "smoke": {
                   "type": "number"
                 },
-                "oxygen": {
-                  "type": "number"
-                },
-                "ph": {
-                  "type": "number"
-                },
-                "temperature": {
-                  "type": "number"
-                },
-                "turbidity": {
+                "temp": {
                   "type": "number"
                 }
               },
@@ -245,6 +131,77 @@
           }
         },
         "summary": "Update a specific IoT reading by ID"
+      }
+    },
+    "/iots": {
+      "get": {
+        "responses": {
+          "200": {
+            "description": "Return all IoT readings"
+          }
+        },
+        "summary": "Get all IoT readings"
+      },
+      "post": {
+        "parameters": [
+          {
+            "example": {
+              "co": 0.00495593864839124,
+              "device": "b8:27:eb:bf:9d:51",
+              "humidity": 51.0,
+              "light": true,
+              "lpg": 0.00765082227055719,
+              "motion": true,
+              "smoke": 0.0204112701224129,
+              "temp": 25.0,
+              "ts": "1.5945120943859746E9"
+            },
+            "in": "body",
+            "name": "body",
+            "required": true,
+            "schema": {
+              "properties": {
+                "co": {
+                  "type": "number"
+                },
+                "device": {
+                  "type": "string"
+                },
+                "humidity": {
+                  "type": "number"
+                },
+                "light": {
+                  "type": "boolean"
+                },
+                "lpg": {
+                  "type": "number"
+                },
+                "motion": {
+                  "type": "boolean"
+                },
+                "smoke": {
+                  "type": "number"
+                },
+                "temp": {
+                  "type": "number"
+                },
+                "ts": {
+                  "type": "string"
+                }
+              },
+              "type": "object"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Successfully created a new IoT reading"
+          },
+          "400": {
+            "description": "Bad Request - Invalid input data"
+          }
+        },
+        "summary": "Create a new IoT reading"
       }
     }
   },
